deploy/k8s/streamlit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poorbricks-streamlit
  namespace: airflow
spec:
  type: ClusterIP
  selector:
    app: poorbricks-streamlit
  ports:
    - name: http
      port: 8501
      targetPort: http
