deploy/k8s/streamlit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poorbricks-streamlit
  namespace: airflow
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poorbricks-streamlit
                port:
                  number: 8501
